@@ -5,6 +5,7 @@
   * Fix an issue causing infinite redirects in production
   * rails g destroy works properly with devise generators (by github.com/andmej)
   * recall options is now passed forward by hooks (by github.com/siong1987)
+  * before_failure callbacks should work on test helpers (by github.com/twinge)
 
 * deprecations
   * Deprecated anybody_signed_in? in favor of signed_in? (by github.com/gavinhughes)
